--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--css do materialize-->
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
-    <!--Meu css do-->
+    <!--Meu css feito-->
     <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
     <!--mostrando pro browser que é uma página otimizada pra mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -101,19 +101,18 @@
 
   	<!--   Sessão para captar os médicos-->
   	<div class="parallax-container valign-wrapper">
-    <div class="section no-pad-bot">
-      <div class="container">
-        <div class="row center">
-          <h5 class="header col s12 light">É médico? Venha trabalhar conosco, faça parte da nossa família!</h5>
-        </div>
-        <div class="row center">
-          <a href="#" id="download-button" class="btn-large waves-effect waves-light white lighten-1 teal-text">Faça seu cadastro</a>
-        </div>
-      </div>
-    </div>
-
-    <div class="parallax"><img src="img/imagem_02.png" alt="Contratar medicos"></div>
-  </div>
+	    <div class="section no-pad-bot">
+	      <div class="container">
+		<div class="row center">
+		  <h5 class="header col s12 light">É médico? Venha trabalhar conosco, faça parte da nossa família!</h5>
+		</div>
+		<div class="row center">
+		  <a href="#" id="download-button" class="btn-large waves-effect waves-light white lighten-1 teal-text">Faça seu cadastro</a>
+		</div>
+	      </div>
+	    </div>
+	    <div class="parallax"><img src="img/imagem_02.png" alt="Contratar medicos"></div>
+	 </div>
 
   <!--   Sessão de contato-->
   <div class="container">
@@ -201,7 +200,7 @@
   	
 
 
- <!--  Scripts-->
+ <!--  Scripts que por sinal não estao funcionando-->
  <script>
  	$(document).ready(function() {
     $('select').material_select();
