--- a/cad_med.html
+++ b/cad_med.html
@@ -47,7 +47,7 @@
 
 
 
-<!--   Sessão de icones falando sobre o sistema   -->
+<!--   Sessão de cadastro do medico  -->
 <div class="container">
     <div class="section">
 
@@ -107,7 +107,7 @@
     <div class="row">
      <div class="col m12">
         <p class="right-align"><a onclick="M.toast({html: 'Cadastrado com sucesso!'}); limpar() " class="waves-effect waves-light btn btn-large teal accent-4 modal-trigger">Fazer Cadastro</a></p>
-          <!-- Modal Structure -->
+          <!-- Estrutura do modal -->
         </div>
     </div>
 </form>
