--- a/lista_medicos.html
+++ b/lista_medicos.html
@@ -2,7 +2,7 @@
 
 <html lang="pt-br">
 <head>
-	<!--font puxada do servidor da google-->
+    <!--font puxada do servidor da google-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--css do materialize-->
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
@@ -153,7 +153,7 @@
   	
 
 
- <!--  Scripts-->
+ <!--  Scripts que por sinal não estão funcionando -->
  <script>
  	$(document).ready(function() {
     $('select').material_select();
